[project]
name = "audio-summarization"
version = "0.1.0"
description = "This Streamlit app lets you transcribe and summarize speech from financial YouTube videos or uploaded `.wav` audio files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "yt-dlp>=2025.6.9",
]
